@@ -1,6 +1,8 @@
 DIST FeedReader-1.2.1.tar.gz 970118 SHA256 cb24d6dcef46080f2aa61fdc1b0187a8c52aedf913e6f63325ee46c631e5c87a SHA512 386c4c137bb4abba918e4f987666358ebe3926b0d4d3b466648d2679efd218376baf1ff58c987dfff953e9b6f084a47db34df8044a3a64ecb1f8e560f0f09e74 WHIRLPOOL 3e6f62c18ffb1dbe669f969b76de496463a49804c3da5d9e35e8726e4cef45552291c94b33cf3129805720cacc51953d60dfb4b54658344c261b412f29ab847f
 DIST FeedReader-1.4.3.tar.gz 1097255 SHA256 e43ceb9eb866c2e8e16d460b6914e6450b2c97fe62f0730a2ec67a3c7d7f0a3c SHA512 bb4057608bbc7c5c5e92decc3222950f13cf6dc5fb1338f661b3f990a68b3ff28f7ecd3b68a90139fc4d4f90c0fa7b193a94a8819e10092a3d37f33a284640be WHIRLPOOL 316a8b6f599dd4c64800e040ebe11f7e9b702a1f2a762b32c0f35ca8098ef3fd35a1ca7ea77c362b0a0eb6450f42d39b1a8c112e8096d1b4af98b2e372b2d23f
+DIST v1.6-beta-1.tar.gz 1064393 SHA256 6d02d2b41adf24beae64c6d4fcc266b875fb07cbad3fd90c2a6cc07ff2dd7b6d SHA512 f9a4b06d3cb6e28425e09d19e2cd17404ad5546defb1f4a451fac1f72ea1a7695d33865d2d6bb84b56531d89e3dcf3b7cc91d33057056821989c9addb5dc93c4 WHIRLPOOL 9eb1ad1b3f0e01dcb4627662321d6933da6d33d99ed0cc3a32fbad5ff524a634e6c97bfdf956c4e84824c058d8a366086b71e740bce4bd79a7dc5a4256ed7aa8
 EBUILD feedreader-1.2.1-r1.ebuild 1443 SHA256 eb134c2603b871ae9b84796985056189156eb519b1d6a4e56e19a1e22ccf40a7 SHA512 c2d46936133aee10000d5d076908334587d968ca75bdb92b7735564620407287c964201298e661f2e0be704d80e44ae68ecd46418ec4c3de16dd6b326a1e41a7 WHIRLPOOL ae9ae971caac69a136fc3ea5f0103c89c2e7d935dc0589a07a15e5dcc57d46dc0ccd1edca5f6699dadbf2c676db17db60b6da95fa8c143746e6cc2281ec49a39
 EBUILD feedreader-1.4.3.ebuild 1432 SHA256 66ea321c389c080f3eb448ee35adba864e93c73b476b9156e7f90b3907a4b47d SHA512 695a82048e272cf0fd6b768c8e0694646e11c31e33bc03377b16f139575eeb53f446c69b9896232c6e082609b0a79ab15e3b27d4339dad7f063221ea662a7e7c WHIRLPOOL 259ada7f1794a8f653d80325611dbf8abd73564718db45c04065591398f0666a72d8796cacabf5eb0e708fc82df058d49840ab54a2f90e2629832b896c3fce04
-MISC ChangeLog 82 SHA256 12ed3543adc88564630b15553233b47b2bf04f4acc8f97eeb5c5befa2c16c75b SHA512 bf31a0cd9c7f4c2b560ef6cd2174e927933d1004c8fab2089e1d0d8c8d76f26f449f9babd33b72176038868259296cd4dda9db0b9cb175274e98fff888290703 WHIRLPOOL f7606de1e805cc293c25b9538e2fd7433ed4cd076bf7e047d7583e4e3886de1a365fe6b1e75bbcbd80f8d4da4a74ec3259d9914462a80ac75e9537dca5c9e52f
+EBUILD feedreader-1.6_beta1.ebuild 1520 SHA256 a4c39b8151bf34e2970fe445e2ee0edbbcaa3271c8587a11b9d573f0cba554ed SHA512 ce9967894ed3e31e5c3f97792817ff17b9d42aededb553b361e1ecc6559e31d6dadeeca06b6cea3ce1672cac95503e555ea4495e0bb0d3bd82fe2263b36ed957 WHIRLPOOL a96af91f2b9ba1cfdcc210f85a9febea47563c1cf05896bf5774ab7f32ff515f45059a9fdcc1225459182a891dbc50edb25b773d6cdfe68ccd1388fc12f45c59
+MISC ChangeLog 259 SHA256 d44cae9af089600e1485d0100824ef2787a8330e642cdddf0f299c1e6d2780df SHA512 a1a1e3bf618c5460f3ded0f49683a552ffe6335a1bb997e05c3b28bec5a266d2f7093407c559c6245b35ce357225c6dc2a96ce4e5b9f38ee402e5feacc583f9a WHIRLPOOL 3ca4f498e111cae3560408038491683c9e58f833314f2e6b75796cf709aaa481ca29e6e4b93833732c7249f9bf6ec911121d3d365d820588693b225d3954158a
 MISC metadata.xml 338 SHA256 065c970f65dc2d874999563e23f1cd3b3eb7d81b3858c7c9fed5ede9c9230d03 SHA512 9f668348e070853e0b24d1bf8f18dcc33d80f40f8d70fe7363b6d008f3a1e841b14a3cadf94e40643b39b4fec18bb06df5ae0a3412b96cc5c43a8c5fe7aa1f19 WHIRLPOOL 51094d7ce385f827f140171e796cfa35a0acc4e69d6c5eea5e305af79be3c255d5d8d1b08fdb219a54e9771b6d8311a03845c1ef1ca4076cd93617d16cb35ed6
