@@ -1,3 +1,7 @@
+*feedreader-1.6_beta1 (10 Jul 2016)
+
+  10 Jul 2016; Manuel Friedli <manuel@fritteli.ch> +feedreader-1.6_beta1.ebuild:
+  net-news/feedreader:  added ebuild for version 1.6_beta1
+
   07 Jun 2016; Manuel Friedli <manuel@fritteli.ch> +ChangeLog:
   Added ChangeLog
-
